[package]
name = "log_wrapper"
version = "0.1.1"
authors = ["nohupped_arch <nohupped@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["log", "logger", "logging", "wrapper"]
description = "Just some boilerplate code to a logger wrapper over the log crate that logs to STDOUT"
readme = "README.md"
repository = "https://github.com/nohupped/log_wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = "0.4.10"